# bespon_py

./: .gitignore  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
bespon/: __init__.py  ast.py  astnodes.py  coding.py  decoding.py  defaults.py  dumping.py  encoding.py  erring.py  escape.py  grammar.py  load_types.py  loading.py  re_patterns.py  roundtrip.py  tooling.py  unicoding.py  version.py
doc/: bespon_spec.tex
test/: test_decoding.py  test_unicoding.py
