[build-system]
requires = ['setuptools']


[project]
name = 'bespon'
description = 'Python library for BespON'
readme = 'README.rst'
requires-python = '>= 3.7'
authors = [
    {name = 'Geoffrey M. Poore', email = 'gpoore@gmail.com'}
]
license = {file = 'LICENSE.txt'}
dynamic = ['version']
keywords = [
    'configuration',
    'serialization',
    'interchange',
]
dependencies = []
# https://pypi.python.org/pypi?:action=list_classifiers
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Science/Research',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Topic :: Utilities',
]


[project.urls]
homepage = 'https://bespon.org/'
repository = 'http://github.com/gpoore/bespon_py'
changelog = 'https://github.com/gpoore/bespon_py/blob/master/CHANGELOG.md'


[tool.setuptools]
packages = ['bespon']
license-files = ['LICENSE*', 'CHANGELOG*']

[tool.setuptools.dynamic]
version = {attr = 'bespon.__version__'}


[tool.ruff]
line-length = 120
